<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_check_weather_one_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_weather_forecast_one_shot_request" />

        <Button
            android:id="@+id/bt_check_weather_data_stream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_weather_forecast_data_stream_request" />

        <Button
            android:id="@+id/bt_change_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_theme" />

        <Button
            android:id="@+id/bt_check_weather_flow_data_stream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_weather_forecast_flow_data_stream" />

        <Button
            android:id="@+id/bt_search_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_city" />
    </LinearLayout>
</layout>
